feat(ever-admin): improved edit Prod. Category EV-1196

--- a/admin/website-angular/src/app/@shared/product/categories/category-edit/category-edit.component.html
+++ b/admin/website-angular/src/app/@shared/product/categories/category-edit/category-edit.component.html
@@ -19,7 +19,7 @@
 	<button
 		class="btn btn-success"
 		type="button"
-		(click)="editCategory(basicInfo.editObject)"
+		(click)="editCategory(basicInfo.getEditObject(currentCategory))"
 		[disabled]="basicInfo.form.invalid"
 	>
 		{{ 'CATEGORY_VIEW.EDIT.DONE' | translate }}!
