feat(ever-admin): preview barcodes" step "Orders Settings" EV-1195

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/settings/orders/orders.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/settings/orders/orders.component.html
@@ -26,10 +26,10 @@
 					<ngx-barcode
 						*ngIf="!isQRCode"
 						[bc-value]="barcodetData"
-						[bc-format]="'CODE128'"
+						[bc-format]="ngxBarcodeFormat"
 						[bc-element-type]="img"
 						[bc-height]="30"
-						[bc-width]="1.5"
+						[bc-width]="1"
 					></ngx-barcode>
 				</div>
 			</div>
