feat(ever-admin): improved code on Setup Merchants page EV-1197

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/basic-info/basic-info.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/basic-info/basic-info.component.html
@@ -170,3 +170,10 @@
 		</form>
 	</nb-card-body>
 </nb-card>
+
+<button nbButton (click)="previousStep.emit()">
+	{{ 'FAKE_DATA.SETUP_MERCHANTS.PREV' | translate }}
+</button>
+<button nbButton (click)="nextStep.emit()" [disabled]="!formValid">
+	{{ 'FAKE_DATA.SETUP_MERCHANTS.NEXT' | translate }}
+</button>
