--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/contact-info/contact-info.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/contact-info/contact-info.component.html
@@ -197,3 +197,10 @@
 		</form>
 	</nb-card-body></nb-card
 >
+
+<button nbButton (click)="previousStep.emit()">
+	{{ 'FAKE_DATA.SETUP_MERCHANTS.PREV' | translate }}
+</button>
+<button nbButton (click)="nextStep.emit()" [disabled]="contactInfoForm.invalid">
+	{{ 'FAKE_DATA.SETUP_MERCHANTS.NEXT' | translate }}
+</button>
