--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/location/location.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/location/location.component.html
@@ -18,3 +18,10 @@
 		</google-map>
 	</nb-card-body>
 </nb-card>
+
+<button nbButton (click)="previousStep.emit()">
+	{{ 'FAKE_DATA.SETUP_MERCHANTS.PREV' | translate }}
+</button>
+<button nbButton (click)="nextStep.emit()" [disabled]="location.invalid">
+	{{ 'FAKE_DATA.SETUP_MERCHANTS.NEXT' | translate }}
+</button>
