--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/settings/orders/orders.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/settings/orders/orders.component.html
@@ -36,3 +36,10 @@
 		</div>
 	</nb-card-body>
 </nb-card>
+
+<button nbButton (click)="previousStep.emit()">
+	{{ 'FAKE_DATA.SETUP_MERCHANTS.PREV' | translate }}
+</button>
+<button nbButton (click)="nextStep.emit()" [disabled]="!canCreateMerchant">
+	{{ 'FAKE_DATA.SETUP_MERCHANTS.NEXT' | translate }}
+</button>
