--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/account/account.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/account/account.component.html
@@ -212,3 +212,10 @@
 		</form>
 	</nb-card-body>
 </nb-card>
+
+<button nbButton disabled (click)="previousStep.emit()">
+	{{ 'FAKE_DATA.SETUP_MERCHANTS.PREV' | translate }}
+</button>
+<button nbButton (click)="nextStep.emit()" [disabled]="!formValid">
+	{{ 'FAKE_DATA.SETUP_MERCHANTS.NEXT' | translate }}
+</button>
