--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/products/products.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/products/products.component.html
@@ -6,8 +6,11 @@
 		<span *ngIf="currentView == componentViews.productsTable">
 			Select from products catalog
 		</span>
-		<span *ngIf="currentView == componentViews.addNewProduct">
-			Create new product
+		<span *ngIf="currentView == componentViews.createProduct">
+			Create product
+		</span>
+		<span *ngIf="currentView == componentViews.addProducts">
+			Add product
 		</span>
 	</nb-card-header>
 	<nb-card-body>
@@ -29,7 +32,7 @@
 						nbButton
 						outline
 						status="success"
-						(click)="currentView = componentViews.addNewProduct"
+						(click)="currentView = componentViews.createProduct"
 					>
 						Create new product
 					</button>
@@ -43,8 +46,41 @@
 			></ea-merchants-setup-products-catalog>
 		</div>
 
-		<div *ngIf="currentView == componentViews.addNewProduct" class="row">
+		<div *ngIf="currentView == componentViews.createProduct" class="row">
 			<h4>Add new product</h4>
 		</div>
-	</nb-card-body></nb-card
->
+
+		<div *ngIf="currentView == componentViews.addProducts" class="row">
+			<ea-merchants-setup-add-products></ea-merchants-setup-add-products>
+		</div> </nb-card-body
+></nb-card>
+
+<div *ngIf="currentView === componentViews.main">
+	<button nbButton (click)="previousStep.emit()">
+		{{ 'FAKE_DATA.SETUP_MERCHANTS.PREV' | translate }}
+	</button>
+	<button nbButton (click)="nextStep.emit()">
+		{{ 'FAKE_DATA.SETUP_MERCHANTS.NEXT' | translate }}
+	</button>
+</div>
+<div *ngIf="currentView !== componentViews.main">
+	<button nbButton (click)="back()">
+		{{ 'FAKE_DATA.SETUP_MERCHANTS.BACK' | translate }}
+	</button>
+	<button
+		*ngIf="currentView === componentViews.productsTable"
+		[disabled]="!haveProductsForAdd"
+		nbButton
+		(click)="select()"
+	>
+		Select
+	</button>
+
+	<button
+		*ngIf="currentView === componentViews.addProducts"
+		nbButton
+		(click)="add()"
+	>
+		Add
+	</button>
+</div>
