feat(ever-admin): extended step "Products" in Setup Merchants EV-1197

--- a/admin/website-angular/src/app/@shared/product/forms/products-table/products-table.component.html
+++ b/admin/website-angular/src/app/@shared/product/forms/products-table/products-table.component.html
@@ -1,5 +1,14 @@
-<nb-card [nbSpinner]="loading">
-	<ng2-smart-table class="products-table" [settings]="settingsSmartTable" [source]="sourceSmartTable" (userRowSelect)="selectProductTmp($event)"
-	 (edit)="edit($event)" (delete)="deleteProduct($event)">
+<nb-card
+	[ngClass]="boxShadow === 'none' ? 'no-box-shadow' : ''"
+	[nbSpinner]="loading"
+>
+	<ng2-smart-table
+		class="products-table"
+		[settings]="settingsSmartTable"
+		[source]="sourceSmartTable"
+		(userRowSelect)="selectProductTmp($event)"
+		(edit)="edit($event)"
+		(delete)="deleteProduct($event)"
+	>
 	</ng2-smart-table>
 </nb-card>
