feat(ever-admin): add warehouse prod. form step "Products" EV-1197

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/products/add-products/add-products.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/products/add-products/add-products.component.html
@@ -1,1 +1,4 @@
-<h2>Add products table</h2>
+<ea-warehouse-products-table
+	#warehouseProductsTable
+	[boxShadow]="'none'"
+></ea-warehouse-products-table>
