--- a/admin/website-angular/src/app/@shared/warehouse-product/forms/warehouse-products-table/warehouse-products-table.component.html
+++ b/admin/website-angular/src/app/@shared/warehouse-product/forms/warehouse-products-table/warehouse-products-table.component.html
@@ -1,4 +1,4 @@
-<nb-card>
+<nb-card [ngClass]="boxShadow === 'none' ? 'no-box-shadow' : ''">
 	<ng2-smart-table
 		[settings]="settingsSmartTable"
 		[source]="sourceSmartTable"
