fix(ever-admin): fixed names on add Warehouse Products table EV-1197

--- a/admin/website-angular/src/app/@shared/warehouse-product/warehouse-product-create/warehouse-product-create.component.html
+++ b/admin/website-angular/src/app/@shared/warehouse-product/warehouse-product-create/warehouse-product-create.component.html
@@ -62,9 +62,9 @@
 			(onPrev)="onStep3Prev()"
 		>
 			<hr />
-			<ea-warehouse-products-table
-				#warehouseProductsTable
-			></ea-warehouse-products-table>
+			<ea-add-warehouse-products-table
+				#addWarehouseProductsTable
+			></ea-add-warehouse-products-table>
 		</wizard-step>
 	</form-wizard>
 </nb-card>
