--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/products/add-products/add-products.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/products/add-products/add-products.component.html
@@ -1,4 +1,4 @@
-<ea-warehouse-products-table
-	#warehouseProductsTable
+<ea-add-warehouse-products-table
+	#addWarehouseProductsTable
 	[boxShadow]="'none'"
-></ea-warehouse-products-table>
+></ea-add-warehouse-products-table>
