--- a/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
@@ -6,7 +6,7 @@
 			<nb-card>
 				<nb-card-body>
 					<nb-stepper #nbStepper orientation="vertical">
-						<nb-step label="Account">
+						<!-- <nb-step label="Account">
 							<ea-merchants-setup-account
 								#account
 								(previousStep)="nbStepper.previous()"
@@ -70,7 +70,7 @@
 								(previousStep)="nbStepper.previous()"
 								(nextStep)="nbStepper.next()"
 							></ea-merchants-setup-product-categories>
-						</nb-step>
+						</nb-step> -->
 						<nb-step label="Products">
 							<ea-merchants-setup-products
 								#products
