feat(ever-admin): remove Warehouse prod. form step "Products" EV-1197

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/products/products.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/products/products.component.html
@@ -15,7 +15,10 @@
 		</span>
 	</nb-card-header>
 	<nb-card-body>
-		<div *ngIf="currentView === componentViews.main" class="main-content">
+		<div
+			[hidden]="currentView !== componentViews.main"
+			class="main-content"
+		>
 			<!-- TODO disable if store id don't exist -->
 			<div class="row actions">
 				<div class="form-group offset-md-2 col-md-4">
