feat(ever-admin): update product form step "Products" EV-1197

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/products/product-mutation/product-mutation.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/products/product-mutation/product-mutation.component.html
@@ -3,4 +3,5 @@
 	#basicInfoForm
 	[productCategories]="productsCategories"
 	[form]="basicInfo"
+	[currentProduct]="product"
 ></ea-product-basic-info-form>
