feat(ever-admin): finished step "Products" EV-1197

--- a/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
@@ -73,6 +73,7 @@
 						</nb-step>
 						<nb-step label="Products">
 							<ea-merchants-setup-products
+								[storeId]="currentStore?.id"
 								#products
 								(previousStep)="nbStepper.previous()"
 								(nextStep)="nbStepper.next()"
