--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/products/products.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/products/products.component.html
@@ -22,13 +22,13 @@
 			[hidden]="currentView !== componentViews.main"
 			class="main-content"
 		>
-			<!-- TODO disable if store id don't exist -->
 			<div class="row actions">
 				<div class="form-group offset-md-2 col-md-4">
 					<button
 						nbButton
 						outline
 						status="success"
+						[disabled]="!storeId"
 						(click)="currentView = componentViews.productsTable"
 					>
 						Select from products catalog
@@ -40,6 +40,7 @@
 						nbButton
 						outline
 						status="success"
+						[disabled]="!storeId"
 						(click)="currentView = componentViews.createProduct"
 					>
 						Create new product
@@ -96,7 +97,7 @@
 	<button nbButton (click)="previousStep.emit()">
 		{{ 'FAKE_DATA.SETUP_MERCHANTS.PREV' | translate }}
 	</button>
-	<button nbButton (click)="nextStep.emit()">
+	<button nbButton (click)="finish()">
 		{{ 'FAKE_DATA.SETUP_MERCHANTS.NEXT' | translate }}
 	</button>
 </div>
