feat(ever-admin): added TODO's in Instruction, Setup Merchants page EV-1197

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
@@ -27,5 +27,11 @@
 		<div *ngIf="stepper.index === 7">
 			TODO add instructions for Orders Settings
 		</div>
+		<div *ngIf="stepper.index === 8">
+			TODO add instructions for Product categories
+		</div>
+		<div *ngIf="stepper.index === 9">
+			TODO add instructions for Products
+		</div>
 	</nb-card-body>
 </nb-card>
