--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/settings/orders/orders.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/settings/orders/orders.component.html
@@ -1,9 +1,19 @@
 <nb-card class="setup-merchant-orders-settings">
-	<nb-card-header>Orders Settings</nb-card-header>
+	<nb-card-header>
+		{{
+			'FAKE_DATA.SETUP_MERCHANTS.ORDERS_SETTINGS.ORDERS_SETTINGS'
+				| translate
+		}}
+	</nb-card-header>
 	<nb-card-body>
 		<div class="form-group offset-md-2 col-md-8 row">
 			<div class="col">
-				<label>Order Barcode/QR code types</label>
+				<label>
+					{{
+						'FAKE_DATA.SETUP_MERCHANTS.ORDERS_SETTINGS.ORDER_BARCODE_QR_CODE_TYPES'
+							| translate
+					}}
+				</label>
 				<nb-radio-group
 					(valueChange)="typeChange($event)"
 					[(ngModel)]="iorderBarcodeType"
